--- a/UI/styles.css
+++ b/UI/styles.css
@@ -13,9 +13,8 @@
   display: none;
 }
 
-
 header  {
-    width: 100vw;
+    width: 100%;
     padding: 1em;
     display: flex;
     align-items: center;
@@ -201,25 +200,25 @@ header  {
     grid-area: hero;
   }
 } 
-
 /***************************************************************************************************************
 *Sidebar 
 ********************** ***********************************************************************/
-.sidebar-nav {
-  display: none;
+.sidebar-nav, .sidebar-nav00 {
+  display: none; 
   position: absolute;
   z-index: 1000;
   background-color: rgba(0, 0, 128);
-  width: 100%;
-  height: 100%;
-  padding: 2.5em;
   transition: 1s;
   top: 0;
   right: 0;
-
+  width: 50%;
+  height: auto;
+  font-size: 0.9em;
+  border-radius: 5px;
+  padding: 1em;
 }
 
-.sidebar-nav a {
+.sidebar-nav a, .sidebar-nav00 a {
   display: block;
   color: white;
   text-decoration: none;
@@ -227,7 +226,7 @@ header  {
   line-height: 2em;
 }
 
-.sidebar-nav a:hover {
+.sidebar-nav a:hover,  .sidebar-nav00 a:hover {
   color: lightskyblue;
 }
 
@@ -249,4 +248,130 @@ header  {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+@media only screen and (min-width: 768px) {
+  .sidebar-nav {
+    width: 30%;
+    height: 20%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .sidebar-nav, .sidebar-nav00 {
+    width: 25%;
+    height: 17%;
+  }
+}
+/************************************************
+* Card styling
+/**********************************************************************************/
+ main {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+}
+ 
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  padding: 1em;
+  margin: 2em;
+  transition: transform 1s;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+}
+ .card img {
+   width: 100%;
+   height: 200px;
+ }
+
+ .image-container {
+   text-align: center;
+   margin: 0.5em;
+ }
+
+ .bio {
+   margin: 1em 0em;
+ }
+
+/************************************************
+* Footer styling
+/**********************************************************************************/
+footer {
+  background-color: rgb(0, 0, 0);
+  padding: 2em;
+  font-size: 0.8rem;
+}
+
+footer a {
+display: block;
+text-decoration: none;
+cursor: pointer;
+line-height: 2.2em;
+}
+
+footer, footer a.logo {
+color: rgb(214, 203, 203);
+}
+
+footer a.logo {
+font-size: 1.2rem;
+text-transform: uppercase;
+display: block;
+margin-bottom: 0.8em;
+}
+
+footer a:hover {
+color: rgb(0, 0, 255);
+}
+
+.resources {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
+
+.resources a {
+  color: rgb(255, 255, 255);
+}
+
+.block-headliner {
+  text-transform: uppercase;
+}
+
+.social-links1 {
+display: none;
+}
+
+.social-links a {
+display: inline;
+}
+
+.social-links a {
+display: inline-block
+}
+.social-links {
+margin-bottom: 3em;
+}
+
+@media only screen and (min-width: 1025px) {
+footer {
+  padding: 2em;
+}
+
+.resources {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.social-links1 {
+  display: block;
+}
+
+.social-links {
+  display: none;
+  }
 }
