ft(167921248) Creates admin can change a user to a mentor -modifies mentors.html - adds becomeMentor.html [finishes #167921248]

--- a/UI/styles.css
+++ b/UI/styles.css
@@ -497,6 +497,23 @@ ul li {
       margin: 0 auto;
     }
   }
+
+    
+/************************************************
+* Become a mentor styling
+/**********************************************************************************/
+.become-mentor p {
+  margin-bottom: 1em;
+}
+
+.mentorForm {
+  margin-top: 1em;
+}
+
+.become-mentor button {
+  display: block;
+  margin-top: 1em;
+}
   
 /************************************************
 * Footer styling
